--- a/_episodes/03.91_Interpreting_reults.md
+++ b/_episodes/03.91_Interpreting_reults.md
@@ -52,7 +52,7 @@ scp -r `login_name`@###.###.###.###:PATH_TO_results_FOLDER/results ./
 
 - **Principal component analysis (PCA) plot**: A two dimensional view of the multi-dimensional gene signatures
 <p align="center">
-<img src="{{ page.root }}/fig/PCA_final.png" style="margin:10px;height:300px"/>
+<img src="{{ page.root }}/fig/PCA.png" style="margin:10px;height:300px"/>
 </p>
 
 
